# proc-macro-workshop

./: README.md
builder/: Cargo.toml
builder/src/: lib.rs
