[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
quote = "1.0.9"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive", "printing","extra-traits"] }
proc-macro2 = { version = "1", default-features = false }